--- a/index.html
+++ b/index.html
@@ -9,6 +9,17 @@
     <script src="javascript.js" defer></script>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="gameDetails">Test</div>
+        <div class="block1"></div>
+        <div class="block2"></div>
+        <div class="block3"></div>
+        <div class="block4"></div>
+        <div class="block5"></div>
+        <div class="block6"></div>
+        <div class="block7"></div>
+        <div class="block8"></div>
+        <div class="block9"></div>
+    </div>
 </body>
 </html>
