--- a/index.html
+++ b/index.html
@@ -11,15 +11,18 @@
 <body>
     <div class="container">
         <div class="gameDetails">Test</div>
-        <div class="block1"></div>
-        <div class="block2"></div>
-        <div class="block3"></div>
-        <div class="block4"></div>
-        <div class="block5"></div>
-        <div class="block6"></div>
-        <div class="block7"></div>
-        <div class="block8"></div>
-        <div class="block9"></div>
+        <div class="block" id="block1"></div>
+        <div class="block" id="block2"></div>
+        <div class="block" id="block3"></div>
+        <div class="block" id="block4"></div>
+        <div class="block" id="block5"></div>
+        <div class="block" id="block6"></div>
+        <div class="block" id="block7"></div>
+        <div class="block" id="block8"></div>
+        <div class="block" id="block9"></div>
+
     </div>
+
+
 </body>
 </html>
