--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
 </head>
 <body>
     <div class="container">
-        <div class="gameDetails">Test</div>
-        <div class="block" id="block1"></div>
-        <div class="block" id="block2"></div>
-        <div class="block" id="block3"></div>
-        <div class="block" id="block4"></div>
-        <div class="block" id="block5"></div>
-        <div class="block" id="block6"></div>
-        <div class="block" id="block7"></div>
-        <div class="block" id="block8"></div>
-        <div class="block" id="block9"></div>
+        <div class="gameDetails">Game buttons/details</div>
+        <div class="blocks" id="block1"></div>
+        <div class="blocks" id="block2"></div>
+        <div class="blocks" id="block3"></div>
+        <div class="blocks" id="block4"></div>
+        <div class="blocks" id="block5"></div>
+        <div class="blocks" id="block6"></div>
+        <div class="blocks" id="block7"></div>
+        <div class="blocks" id="block8"></div>
+        <div class="blocks" id="block9"></div>
 
     </div>
 
