Styling of display element above tic-tac-toe board.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,17 @@
 </head>
 <body>
     <div class="container">
-        <div class="gameDetails">Game buttons/details</div>
+        <div class="gameDetails">
+            <div class="gameDetails__playerOne">Player One</div>
+            <div class="gameDetails__playerTwo">Player Two</div>
+            <div class="gameDetails__button">
+                <button>Start Game</button>
+            </div>
+            <div class="gameDetails__displayElement">
+                Display Results Here
+            </div>
+
+        </div>
         <div class="blocks" id="block1"></div>
         <div class="blocks" id="block2"></div>
         <div class="blocks" id="block3"></div>
