--- a/index.html
+++ b/index.html
@@ -1,38 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tic Tac Toe</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css" />
     <script src="javascript.js" defer></script>
-</head>
-<body>
+  </head>
+  <body>
     <div class="container">
-        <div class="gameDetails">
-            <div class="gameDetails__playerOne">Player One</div>
-            <div class="gameDetails__playerTwo">Player Two</div>
-            <div class="gameDetails__button">
-                <button>Start Game</button>
-            </div>
-            <div class="gameDetails__displayElement">
-                Display Results Here
-            </div>
-
+      <div class="gameDetails">
+        <div class="gameDetails__playerOne">Player One</div>
+        <div class="gameDetails__playerTwo">Player Two</div>
+        <div class="gameDetails__button">
+          <button>Start Game</button>
         </div>
-        <div class="blocks" id="block1"></div>
-        <div class="blocks" id="block2"></div>
-        <div class="blocks" id="block3"></div>
-        <div class="blocks" id="block4"></div>
-        <div class="blocks" id="block5"></div>
-        <div class="blocks" id="block6"></div>
-        <div class="blocks" id="block7"></div>
-        <div class="blocks" id="block8"></div>
-        <div class="blocks" id="block9"></div>
-
+        <div class="gameDetails__displayElement">Display Results Here</div>
+      </div>
+      <div class="blocks" id="block1"></div>
+      <div class="blocks" id="block2"></div>
+      <div class="blocks" id="block3"></div>
+      <div class="blocks" id="block4"></div>
+      <div class="blocks" id="block5"></div>
+      <div class="blocks" id="block6"></div>
+      <div class="blocks" id="block7"></div>
+      <div class="blocks" id="block8"></div>
+      <div class="blocks" id="block9"></div>
     </div>
-
-
-</body>
+  </body>
 </html>
