Updates display on win or tie.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
         <div class="gameDetails__button">
           <button>Start Game</button>
         </div>
-        <div class="gameDetails__displayElement">Display Results Here</div>
+        <div class="gameDetails__displayElement" id="resultsDisplay">
+          Display Results Here
+        </div>
       </div>
       <div class="blocks" id="block1"></div>
       <div class="blocks" id="block2"></div>
