Finished restart button logic.

--- a/index.html
+++ b/index.html
@@ -14,11 +14,10 @@
         <div class="gameDetails__playerOne">Player One</div>
         <div class="gameDetails__playerTwo">Player Two</div>
         <div class="gameDetails__button">
-          <button>Start Game</button>
+          <button id="startButton">Start Game</button>
+          <button id="restartButton">Restart Game</button>
         </div>
-        <div class="gameDetails__displayElement" id="resultsDisplay">
-          Display Results Here
-        </div>
+        <div class="gameDetails__displayElement" id="resultsDisplay"></div>
       </div>
       <div class="blocks" id="block1"></div>
       <div class="blocks" id="block2"></div>
